--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: gc
+  username: upendra
   password: password
   socket: /var/run/mysqld/mysqld.sock
 
